--- a/static/index.html
+++ b/static/index.html
@@ -22,15 +22,20 @@
     <div class="row marketing">
         <div id="chartContainer"></div>
     </div>
+
     <div class="row marketing text-center">
-        <p>Concurrency Level:&nbsp<span id="concurrencyLevel">0</span></p>
-        <select id="scenarioPicker" class="form-control">
-        </select>
+        <select id="scenarioPicker" class="form-control"></select>
     </div>
+
+    <div class="row marketing text-center">
+        <p>Concurrenct Users:&nbsp<span id="concurrencyLevel">0</span></p>
+    </div>
+
     <div class="row marketing text-center">
         <span><button id="increaseConcurrency" type="button" class="btn btn-success">Increase</button></span>
         <span><button id="decreaseConcurrency" type="button" class="btn btn-warning">Decrease</button></span>
     </div>
+
 
 
     <div class="footer">
